hphp/hack/test/typecheck/override_abstract_trait.php
<?hh // partial

trait C {
  public function f(): void {}
}

abstract class D {
  use C;
  abstract public function f(): void;
}
